fixed import and added first query

--- a/etl/import_data/create_tables_import_data.ipynb
+++ b/etl/import_data/create_tables_import_data.ipynb
@@ -45,8 +45,8 @@
    "source": [
     "# create world cup search terms querydim view\n",
     "C.execute(\"\"\"CREATE OR REPLACE TABLE AOL_SCHEMA.WC_QUERYDIM (\n",
-    "    QUERY VARCHAR(5000) NOT NULL,\n",
-    "    ID DECIMAL(18) NOT NULL\n",
+    "    ID DECIMAL(18) NOT NULL,\n",
+    "    QUERY VARCHAR(5000) NOT NULL\n",
     ");\"\"\")\n",
     "C.import_from_file('../../data/query_data/wc_querydim.csv', (\"AOL_SCHEMA\", \"WC_QUERYDIM\"))"
    ]
